# Snake

./: .gitignore  CMakeLists.txt  game_settings.h  input.c  input.h  main.c  main.h  menu.txt
controller/: input_controller.c  input_controller.h
logic/: game-old.c  game-old.h  game.c  game.h
menu/: menu.c  menu.h  menu.txt  menumain.c  menumain.h  parser.c  parser.h  util.c  util.h
model/: board.c  board.h  cell.h  game.c  game.h  point.c  point.h  snake.c  snake.h  structs.h
util/: logger.c  logger.h  timer.c  timer.h
view/: snake_fragments.c  snake_fragments.h  view.c  view.h
